fix(app): collapse cell

--- a/packages/libro-app/src/index.less
+++ b/packages/libro-app/src/index.less
@@ -2,6 +2,10 @@
   background: var(--mana-libro-background);
   height: 100%;
 
+  .libro-cell-collapsed-expander {
+    padding-left: 0;
+  }
+
   .libro-app-container-header {
     padding: 12px 24px;
     border-bottom: 1px solid var(--mana-libro-code-border-color);
